--- a/lecture_6/index.html
+++ b/lecture_6/index.html
@@ -7,8 +7,12 @@
     <title>Document</title>
   </head>
   <body>
-    <main></main>
+    <!-- <main></main> -->
     
+    <div id="container"></div>
+    <input type="text" id="input_container">
+    <button id="submit">submit</button>
+    <!-- <button onclick="alert('hello')">click</button> -->
     <h1 class="heading">Hello</h1>
 
     <script src="./index.js" type="module"></script>
