--- a/index.html
+++ b/index.html
@@ -12,10 +12,29 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
-    <h1>Hello from Bootstrap!!</h1>
+  <style>
+    body {
+      background-color: white;
+      color: black;
+    }
 
-    <div class="container">
+    .dark-theme {
+      background-color: black;
+      color: white;
+    }
+
+    .visible {
+      display: none;
+    }
+
+    #heading {
+      display: block;
+    }
+  </style>
+  <body>
+    <h1 id="heading">Hello World!</h1>
+    <button id="toggle">Toggle Heading</button>
+    <!-- <div class="container">
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Navbar</a>
@@ -75,11 +94,13 @@
           </div>
         </div>
       </nav>
-    </div>
-    <script
+    </div> -->
+    <!-- <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
+
+    <script src="./index.js"></script>
   </body>
 </html>
